--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gulp-streamify": "^1.0.0",
     "gulp-stylus": "^2.0.6",
     "gulp-uglify": "^1.2.0",
+    "id3-parser": "^1.0.1",
     "nib": "^1.1.0",
     "normalize-styl": "^3.0.3",
     "react": "^0.13.3",
