--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "browserify": "^11.0.1",
     "coffee-reactify": "^4.0.0",
     "coffee-script": "^1.9.3",
+    "colors": "^1.1.2",
     "gulp-combine-media-queries": "^0.2.0",
     "gulp-cssmin": "^0.1.7",
     "gulp-if": "^1.2.5",
